[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/GameOver.gd" type="Script" id=1]
[ext_resource path="res://Fuentes/BigFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Visuales/Options/ButtomBig.png" type="Texture" id=3]
[ext_resource path="res://Visuales/Options/ButtomBigPressed.png" type="Texture" id=4]
[ext_resource path="res://Visuales/Options/ButtomBigHover.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "BackToMenu"
tracks/0/type = "value"
tracks/0/path = NodePath("Main:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 224 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "StartGame"
tracks/0/type = "value"
tracks/0/path = NodePath("Main:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -224 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "StatEditorUnlocked"
length = 1.2
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Main/Unlocked:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 0.972549, 0.933333, 0.74902, 1 ), Color( 0.662745, 0.352941, 0.247059, 1 ), Color( 0.141176, 0.156863, 0.156863, 1 ), Color( 0.972549, 0.933333, 0.74902, 1 ), Color( 0.498039, 0.596078, 0.376471, 1 ), Color( 0.141176, 0.156863, 0.156863, 1 ) ]
}

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Main" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -0.00012207
margin_bottom = -3.05176e-005
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Main"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -128.0
margin_top = 8.0
margin_right = 6.10352e-005
margin_bottom = 28.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.662745, 0.352941, 0.247059, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 0
text = "FIN DE LA PARTIDA"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Days" type="Label" parent="Main"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -56.0
margin_right = 128.0
margin_bottom = -41.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.972549, 0.933333, 0.74902, 1 )
text = "Dias en cuarentena: "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Infected" type="Label" parent="Main"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -32.0
margin_right = 128.0
margin_bottom = -17.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.972549, 0.933333, 0.74902, 1 )
text = "Estabas infectado: "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfectedBy" type="Label" parent="Main"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -16.0
margin_right = 128.0
margin_bottom = -0.999977
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.972549, 0.933333, 0.74902, 1 )
text = "Fuiste infectado por: "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfectedByYou" type="Label" parent="Main"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = 2.28882e-005
margin_right = 128.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.972549, 0.933333, 0.74902, 1 )
text = "Infectaste a: "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Unlocked" type="Label" parent="Main"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = 56.0
margin_right = 128.0
margin_bottom = 71.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.141176, 0.156863, 0.156863, 1 )
text = "Partida Personalizada Desbloqueada"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Retry" type="TextureButton" parent="Main"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -124.0
margin_top = 80.0
margin_right = -3.99994
margin_bottom = 110.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Main/Retry"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_top = -7.0
margin_right = 56.0
margin_bottom = 8.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.972549, 0.933333, 0.74902, 1 )
text = "Jugar de nuevo"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="TextureButton" parent="Main"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 4.00006
margin_top = 80.0
margin_right = 124.0
margin_bottom = 110.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Main/Back"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -7.0
margin_right = 48.0
margin_bottom = 8.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.972549, 0.933333, 0.74902, 1 )
text = "Volver al menu"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/BackToMenu = SubResource( 1 )
anims/StartGame = SubResource( 2 )
anims/StatEditorUnlocked = SubResource( 3 )
[connection signal="pressed" from="Main/Retry" to="." method="RetryPressed"]
[connection signal="pressed" from="Main/Back" to="." method="BackPressed"]
